<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Gabriel Client</string>
    <string name="title_activity_main" translatable="false">Gabriel Client</string>
    <string name="subtitle" translatable="false">Wearable Cognitive Assistance</string>

    <!-- activity_serverlist.xml -->
    <string name="options_heading">Options</string>
    <string name="subtitles">Show Subtitles for Audio Feedback</string>
    <string name="server_state">Stateful Server (e.g. OpenWorkflow Applications)</string>
    <string name="speech_dedup">Period to Suppress Identical Speech (in Seconds)</string>
    <string name="serverlist_heading">Server List</string>
    <string name="name_subheading">Name</string>
    <string name="address_subheading">Address</string>
    <string name="name_hint">Server Name</string>
    <string name="address_hint" translatable="false">10.0.0.2[:9099]</string>
    <string name="error_empty">Name and address are required.</string>
    <string name="error_invalidURI">Server address is an invalid URI.</string>
    <string name="error_exists">A server by that name already exists.</string>
    <string name="server_removed">Removed server: </string>
    <string name="server_kept">Server retained.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="server_delete_prompt">Are you sure you wish to delete this server?</string>
    <string name="server_delete_title">Remove %s?</string>
    <string name="server_add_hovertext">Add Server</string>
    <string name="connecting_toast">Connecting to Gabriel server&#8230;</string>
    <string name="connection_error">Connection Error</string>
    <string name="could_not_connect">Could not connect</string>
    <string name="server_disconnected">Server Disconnected</string>
    <string name="back_button">Go Back</string>
    <string name="backend_instructions">Gabriel requires a backend server to connect to. You can setup your own backend server by following the instructions at https://github.com/cmusatyalab/gabriel-instruction to launch one of the Gabriel application containers available on Docker Hub.</string>

    <string name="about_menu">About&#8230;</string>
    <string name="about_title" translatable="false">Gabriel - a platform for wearable cognitive assistance</string>
    <string name="about_message" translatable="false">Copyright &#169; 2018-2020\nCarnegie Mellon University\nThis is a developing project.\n\nAll source code and documentation are under the Apache License, Version 2.0 (http://www.apache.org/licenses/LICENSE-2.0.html)</string>

    <string name="shared_preference_file_key" translatable="false">edu.cmu.cs.gabriel</string>

    <!-- Glass Launch-related strings. -->
    <string name="start_gabriel_voice_trigger" translatable="false">Gabriel Assistant</string>
    <string name="action_settings">Settings</string>
    
</resources>