<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.cmu.cs.gabrielclient.ServerListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/AppTheme"
            app:layout_scrollFlags="enterAlways"
            app:logo="@mipmap/ic_launcher"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitle="@string/subtitle"
            app:title="@string/app_name" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/options_heading"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/subtitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/subtitles" />


    <TextView
        android:id="@+id/textServerList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverlist_heading"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_subheading"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address_subheading"
            android:textSize="12sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/addServerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/name_hint"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/addServerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/address_hint"
                android:inputType="text|textUri" />

            <ImageView
                android:id="@+id/imgViewAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/server_add_hovertext"
                android:onClick="addValue"
                android:src="@android:drawable/ic_menu_add" />
        </LinearLayout>


    <ListView
        android:id="@+id/listServers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="2dp" />
</LinearLayout>